--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "signature_pad": "^3.0.0-beta.3"
     }
 }
