--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "intervention/image": "^2.5",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "rap2hpoutre/laravel-log-viewer": "^1.6",
         "spatie/laravel-permission": "^2.0"
     },
     "require-dev": {
